added styles and semantics

--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Start</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Test design</title>
 </head>
 <body>
   <header>
-    <p>Header</p>
+    <p class="CompanyName">CompanyName</p>
+    <nav>
+      <ul>
+        <li>Course Categpries</li>
+        <li>About us</li>
+        <li>Contact us</li>
+        <li>Career</li>
+      </ul>
+    </nav>
+    <p class="headerTextColor">Log in</p>
+    <div>
+      <p class="headerTextColor">Get started</p>
+    </div>
   </header>
-  <p>Hello,world!</p>
-<main>
-  <p>Main</p>
-</main>
+  
+  <main>
+    <p>Main</p>
+  </main>
 </body>
 </html>
